--- a/app/views/timetable/_employee_timetable.erb
+++ b/app/views/timetable/_employee_timetable.erb
@@ -23,8 +23,12 @@
       <table id="teacher" cellspacing="1">
         <tr id="weekday-header"><th></th></tr>
         <% @all_weekdays.each do |weekday| -%>
-          <tr class="batch">
-            <td class="batch_name themed_text"><%= t(Date::DAYNAMES[weekday.day_of_week].downcase).upcase -%></td>
+          <tr>
+            <td class="batch_name themed_text tte">
+              <div class="batch">
+                <%= t(Date::DAYNAMES[weekday.day_of_week].downcase).upcase -%>
+              </div>
+            </td>
           </tr>
         <% end %>
       </table>
@@ -39,60 +43,62 @@
           <% end -%>
         </tr>
         <% @all_weekdays.each do |weekday| -%>
-          <tr class="batch">
+          <tr>
 
             <% @all_classtimings.each do |ct| -%>
               <td class="tte">
-                <% unless @timetable_entries[weekday.id][ct.id].blank? %>
-                  <% if @timetable_entries[weekday.id][ct.id].size > 1 %>
-                    <div class="entries_wrapper">
-                      <div class="entries">
-                        <% @timetable_entries[weekday.id][ct.id].each_pair do |k, tte| %>
-                          <div class="sub_name">
-                            <% if tte.subject.elective_group.nil? %>
-                              <%= formatted_timetable_cell(tte)  -%>
-                            <% else %>
-                              <%= @electives[tte.subject.elective_group_id].first.code %>
-                            <% end %>
-                          </div>
-                          <div class="batch_name themed_text batch_code no_padding">
-                            <%= timetable_batch (tte)  -%>
-                          </div>
-                        <% end %>
-                      </div>
-                    </div>
-                    <% tte = @timetable_entries[weekday.id][ct.id].first %>
-                    <% unless tte.blank? %>
-                      <div class="sub_name">
-                        <% if tte.last.subject.elective_group.nil? %>
-                          <%= formatted_timetable_cell(tte.last)  -%>
-                        <% else %>
-                          <%= @electives[tte.last.subject.elective_group_id].first.code %>
-                        <% end %>
-                      </div>
-                      <div class="batch_name themed_text batch_code no_padding">
-                        <%= timetable_batch (tte.last)  -%>
-                      </div>
-                      <a class="themed_text add_sym">+</a>
-                    <% end %>
-                  <% else %>
-                    <% tte = @timetable_entries[weekday.id][ct.id].first %>
-                    <% unless tte.blank? %>
-                      <% if tte.last.subject.elective_group.nil? %>
-                        <div class="sub_name">
-                          <%= formatted_timetable_cell(tte.last)  -%>
+                <div class="batch">
+                  <% unless @timetable_entries[weekday.id][ct.id].blank? %>
+                    <% if @timetable_entries[weekday.id][ct.id].size > 1 %>
+                      <div class="entries_wrapper">
+                        <div class="entries">
+                          <% @timetable_entries[weekday.id][ct.id].each_pair do |k, tte| %>
+                            <div class="sub_name">
+                              <% if tte.subject.elective_group.nil? %>
+                                <%= formatted_timetable_cell(tte)  -%>
+                              <% else %>
+                                <%= @electives[tte.subject.elective_group_id].first.code %>
+                              <% end %>
+                            </div>
+                            <div class="batch_name themed_text batch_code no_padding">
+                              <%= timetable_batch (tte)  -%>
+                            </div>
+                          <% end %>
                         </div>
-                      <% else %>
+                      </div>
+                      <% tte = @timetable_entries[weekday.id][ct.id].first %>
+                      <% unless tte.blank? %>
                         <div class="sub_name">
-                          <%= @electives[tte.last.subject.elective_group_id].first.code %>
+                          <% if tte.last.subject.elective_group.nil? %>
+                            <%= formatted_timetable_cell(tte.last)  -%>
+                          <% else %>
+                            <%= @electives[tte.last.subject.elective_group_id].first.code %>
+                          <% end %>
+                        </div>
+                        <div class="batch_name1 themed_text batch_code no_padding">
+                          <%= timetable_batch (tte.last)  -%>
+                        </div>
+                        <a class="themed_text add_sym">+</a>
+                      <% end %>
+                    <% else %>
+                      <% tte = @timetable_entries[weekday.id][ct.id].first %>
+                      <% unless tte.blank? %>
+                        <% if tte.last.subject.elective_group.nil? %>
+                          <div class="sub_name">
+                            <%= formatted_timetable_cell(tte.last)  -%>
+                          </div>
+                        <% else %>
+                          <div class="sub_name">
+                            <%= @electives[tte.last.subject.elective_group_id].first.code %>
+                          </div>
+                        <% end %>
+                        <div class="batch_name themed_text batch_code no_padding">
+                          <%= timetable_batch (tte.last)  -%>
                         </div>
                       <% end %>
-                      <div class="batch_name themed_text batch_code no_padding">
-                        <%= timetable_batch (tte.last)  -%>
-                      </div>
                     <% end %>
-                  <% end %>
-                <% end -%>
+                  <% end -%>
+                </div>
               </td>
             <% end -%>
           </tr>
