added  fix  for subject_ids
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4018 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -32,7 +32,7 @@
     </li>
   <% elsif @current_user.employee? %>
     <% @employee= @current_user.employee_record  %>
-    <% @employee_subjects= @employee.subject_ids  %>
+    <% @employee_subjects= @employee.subjects.collect(&:id)  %>
     <% @employee_batches=Batch.find_all_by_employee_id(@employee.id) %>
     <% @attendance_type = Configuration.find_by_config_key('StudentAttendanceType') %>
     <% if @attendance_type.config_value == 'Daily' %>
