fixes #3793 [Password Change promt on first login] fixes #3748 [Add amount field for subjects]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4025 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/configuration/settings.html.erb
+++ b/app/views/configuration/settings.html.erb
@@ -153,10 +153,10 @@
         <% end %>
       <% end %>
       <br/>
-      <% if @config[:enable_news_comment_moderation] == '1' %>
-        <%= check_box :configuration, :enable_news_comment_moderation, :checked => true %><%= t('enable_news_comment_moderation') %>
+      <% if @config[:first_time_login_enable] == '1' %>
+        <%= check_box :configuration, :first_time_login_enable, :checked => true %><%= t('enable_first_time_login') %>
       <% else %>
-        <%= check_box :configuration, :enable_news_comment_moderation, :checked => false %><%= t('enable_news_comment_moderation') %>
+        <%= check_box :configuration, :first_time_login_enable, :checked => false %><%= t('enable_first_time_login') %>
       <% end %>
       <% FedenaPlugin::REGISTERED_HOOKS[:general_settings_checkbox].each do |mod| %>
         <br/>
