--- a/public/stylesheets/finance/fees_submission_batch.css
+++ b/public/stylesheets/finance/fees_submission_batch.css
@@ -54,17 +54,15 @@
 }
 
 .submit_button {
-    padding: 7px 10px;
-    color: #fff;
-    background: #27292B;
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    font-weight: bold;
-    font-size: 14px;
-    border:none;
+    background: none repeat scroll 0 0 #27292B;
+    border: medium none;
+    color: #FFFFFF;
+    cursor: pointer;
     font-family: arial;
-    cursor:pointer;
-    margin: 20px auto 0;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 18px 132px 0 0;
+    padding: 7px 10px;
 }
 .submit_button:hover{
     background:  #373B3F;
@@ -258,20 +256,19 @@ label-field-pair2 {
 
 }
 table#listing td a {
-    padding: 7px 10px;
-    color: #fff;
-    background: #27292B;
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    font-weight: bold;
-    font-size: 14px;
-    border:none;
-    font-family: arial;
-    cursor:pointer;
-    margin: 0 auto;
-    text-decoration: none;
+    background: none repeat scroll 0 0 #27292B;
+    border: medium none;
+    color: #FFFFFF;
+    cursor: pointer;
     float: right;
+    font-family: arial;
+    font-size: 14px;
+    font-weight: bold;
+    margin: -34px auto 0;
+    padding: 7px 10px;
+    text-decoration: none;
 }
+
 table#listing td a:hover{
     background:  #373B3F;
     color: #fff;
