--- a/public/stylesheets/finance/fees_student_dates.css
+++ b/public/stylesheets/finance/fees_student_dates.css
@@ -74,19 +74,17 @@
 }
 
 .submit_button {
-    padding: 7px 10px;
-    color: #fff;
-    background: #27292B;
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    font-weight: bold;
-    font-size: 14px;
-    border:none;
+    background: none repeat scroll 0 0 #27292B;
+    border: medium none;
+    color: #FFFFFF;
+    cursor: pointer;
     font-family: arial;
-    cursor:pointer;
-    margin: 18px 0 0;
-    margin-right:10px;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 18px 132px 0 0;
+    padding: 7px 10px;
 }
+
 .submit_button:hover{
     background:  #373B3F;
 }
@@ -223,20 +221,19 @@ label-field-pair2 {
     margin-top: 17px;
 
 }
+
 table#listing td a {
-    padding: 7px 10px;
-    color: #fff;
-    background: #27292B;
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    font-weight: bold;
-    font-size: 14px;
-    border:none;
-    font-family: arial;
-    cursor:pointer;
-    margin: 0 auto;
-    text-decoration: none;
+    background: none repeat scroll 0 0 #27292B;
+    border: medium none;
+    color: #FFFFFF;
+    cursor: pointer;
     float: right;
+    font-family: arial;
+    font-size: 14px;
+    font-weight: bold;
+    margin: -34px auto 0;
+    padding: 7px 10px;
+    text-decoration: none;
 }
 table#listing td a:hover{
     background:  #373B3F;
@@ -273,4 +270,24 @@ table#listing td.col-8 {
 }
 table#listing td.col-6 {
     width: 6%;
+}
+
+.name{
+    color: #999999;
+    float: left;
+    width: 220px;
+    font-weight: bold;
+    font-size: 13px;
+}
+
+.val {
+    width: 900px;
+    color: #bb0000;
+    font-weight: bold;
+    font-size: 13px;
+}
+
+.val span{
+    margin-right:12px;
+    color: black;
 }
